--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <header>
     <img src="img/foto.m.jpeg" alt="Foto Profil" class="profile-img">
-    <h1>Biodata Pribadi</h1>
+    <h1>Biodata</h1>
     <p>Meila Zahrah Risdianti</p>
 </header>
 
 <div class="container mt-4">
 
     <section id="data-pribadi">
-        <h2>Identitas Diri</h2>
+        <h2>Data Pribadi</h2>
         <ul class="list-group">
             <li class="list-group-item"><strong>Nama Lengkap:</strong> Meila Zahrah Risdianti</li>
             <li class="list-group-item"><strong>Tempat, Tanggal Lahir:</strong> Pemalang, 28 Mei 2005</li>
@@ -32,8 +32,8 @@
     <section id="pendidikan">
         <h2>Pendidikan</h2>
         <ul class="list-group">
-            <li class="list-group-item"><strong>STMIK WIDYA UTAMA</strong> - S1 TEKNIK INFORMATIKA - 2023 - Sekarang</li>
-            <li class="list-group-item"><strong>SMA NEGERI 1 PURBALINGGA</strong> - MIPA - 2020 - 2023</li>
+            <li class="list-group-item">2023 - STMIK WIDYA UTAMA - S1 TEKNIK INFORMATIKA</li>
+            <li class="list-group-item">2020 - SMA NEGERI 1 PURBALINGGA - MIPA</li>
         </ul>
     </section>
 
@@ -45,7 +45,7 @@
         </ul>
     </section>
 
-    <section id="keahlian">
+    <section id="hobi">
         <h2>Hobi</h2>
         <ul class="list-group">
             <li class="list-group-item">Menggambar</li>
