--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h2>Data Pribadi</h2>
         <ul class="list-group">
             <li class="list-group-item"><strong>Nama Lengkap:</strong> Meila Zahrah Risdianti</li>
-            <li class="list-group-item"><strong>Tempat, Tanggal Lahir:</strong> Pemalang, 28 Mei 2005</li>
-            <li class="list-group-item"><strong>Alamat:</strong> Kalikabong, Kec.Kalimanah, Kab.Purbalingga</li>
+            <li class="list-group-item"><strong>Tempat, Tanggal Lahir:</strong> Pemalang, 28 Mei 2009</li>
+            <li class="list-group-item"><strong>Alamat:</strong> Kalikabong</li>
             <li class="list-group-item"><strong>Jenis Kelamin:</strong> Perempuan</li>
             <li class="list-group-item"><strong>Email:</strong> meilazahrahrisdianti@gmail.com</li>
             <li class="list-group-item"><strong>No. Telepon:</strong> 0882-2185-0238</li>
